Closed Bug 841530 Opened 11 years ago Closed 11 years ago

Tweaks to fix JIT inspector

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: bhackett1024, Unassigned)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
Removing the decompiler broke the JIT inspector somewhat --- all code blocks and opcode info is displayed on the first line due to the lack of some information provided by the decompiler.  A few changes are necessary to the source to get the inspector working again --- this fixes a bogus assert, adds a 'line' field to the JSON for the script's initial line, and fixes a preexisting issue where Ion OSR wasn't working quite right when profiling scripts.
Attachment #714085 - Flags: review?(nicolas.b.pierron)
Attachment #714085 - Flags: review?(nicolas.b.pierron) → review+
https://hg.mozilla.org/mozilla-central/rev/74ad7a9937dc
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: