Bug 841530 - Tweaks to fit JIT inspector after the decompilerectomy, r=pierron.